--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 This repository contains models aimed at solving the challenges posed at https://www.kaggle.com/c/
 
 Todo:
-1. Submit first attempt at Titanic challenge.
+1. Submit second attempt at Titanic challenge.
