--- a/001-titanic-passenger-surival-prediction/README
+++ b/001-titanic-passenger-surival-prediction/README
@@ -1,7 +1,10 @@
 Ideas:
-(1) add more columns
-(2) remove rows with missing data
-(3) configure RandomForestClassifier to incorporate missing data
+(1) remove rows with missing data
+
+### Version 2 ###
+Score: 0.72248
+Description: Added age column and replaced NaN values with the mean.
+Notebook: https://www.kaggle.com/jackrobsongateshead/getting-started-with-titantic/
 
 ### Version 1 ###
 Score: 0.77511
