Add todo and promising material.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 This repository contains models aimed at solving the challenges posed at https://www.kaggle.com/c/
 
 Todo:
-*
+* Code a Python model for the Google Sheets model created using the Excel discussion.
