001-titanic ~ More insights drawn from looking at the training data inside Google Sheet's pivot tables.

--- a/001-titanic-passenger-surival-prediction/README
+++ b/001-titanic-passenger-surival-prediction/README
@@ -6,7 +6,7 @@ Ideas:
 Interesting discussions to look at:
 * https://www.kaggle.com/gunesevitan/titanic-advanced-feature-engineering-tutorial
 
-Best performing notebooks:
+Best performing notebooks to investigate:
 (0.95693) https://www.kaggle.com/scirpus/sack-of-potatoes-complex-math/code
 
 ### Version 5 ###
