--- a/001-titanic-passenger-surival-prediction/README
+++ b/001-titanic-passenger-surival-prediction/README
@@ -1,5 +1,6 @@
 Ideas:
 * search dataset for features than predict survival by > 50%
+* see if can tweak lower class female 19+ who spent > $20 on cabin survival rates
 * group ages and see if that makes any difference to predicting male/female survival
 * group non-ages and see if that makes any difference to predicting male/female survival
 * look at how SibSp / Pclass relationship affects survival
@@ -11,6 +12,17 @@ Interesting discussions to look at:
 
 Best performing notebooks to investigate:
 (0.95693) https://www.kaggle.com/scirpus/sack-of-potatoes-complex-math/code
+
+### Version 7 ###
+Score: 0.75119
+Features:
+* assumes males perish
+* assumes females aged < 1 year old survive
+* assumes lower class females aged 1-3 perish
+* assumes lower class females aged 4-5 survive
+* assumes lower class females aged 6-12 perish
+* assumes lower class females aged 13-18 survive
+* assumes lower class females aged 19+ perish
 
 ### Version 6 ###
 Score: 0.75119
